调整几个kHz单位为100kHz 调整aotfController打开的同时加载Calibrationparameters.ini文件